<resources>
    <string name="app_name">BGG Query</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="UserName">username</string>
    <string name="EscribeElNombreDeLosUsuarios">Agrega los usernames de boardgamegeek que jugarán</string>
    <string name="EligirQueJugar">Eligir que jugar</string>
    <string name="Salir">Salir</string>
    <string name="Otros">Otros</string>
    <string name="Cargando">Cargando...</string>
    <string name="CargandoSitioWeb">Cargando sitio web...</string>
    <string name="Procesando">Procesando...</string>
    <string name="MencionesEspeciales">Menciones especiales</string>
    <string name="TotalRating">TOTAL RATING</string>
    <string name="Error">Error</string>
    <string name="ElUsuarioEsInvalido">%s es un username invalido</string>
    <string name="ok">OK</string>
    <string name="AgregarUsername">Agregar username</string>
    <string name="NotInternet">Se necesita internet</string>
    <string name="Agregar">Agregar</string>
    <string name="Cancelar">Cancelar</string>
    <string name="Nuevo">Nuevo</string>
    <string name="historial">Historial de usernames</string>
    <string name="ludotecas">Ludotecas</string>
    <string name="TheHotness">The Hotness</string>
    <string name="NotUsers">Se necesita agregar al menos un username</string>
    <string name="JuegosVotos">Juegos con %d voto</string>
    <string name="JuegosVotosPlural">Juegos con %d votos</string>
    <string name="ErrorConElServidorIntenteloMasTarde">Error con el servidor, inténtelo más tarde</string>
    <string name="AbrirEnUnNavegador">Abrir en un navegador</string>
    <string name="Abrir">Abrir</string>
</resources>
