<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/edit_name"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@android:color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="8dp"
        android:paddingTop="8dp"
        android:paddingEnd="8dp"
        android:paddingBottom="8dp">

        <EditText
            android:id="@+id/editTextAddUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/UserName"
            android:inputType="textPersonName" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="4dp"

            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonFrammet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="4dp"
                android:paddingStart="4dp"
                android:paddingEnd="4dp"
                android:background="@color/colorPrimary"
                android:text="@string/Agregar"
                android:textColor="@android:color/white"
                android:textSize="18sp" />

            <Button
                android:id="@+id/buttonCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:background="@color/colorPrimary"
                android:paddingStart="4dp"
                android:paddingEnd="4dp"
                android:text="@string/Cancelar"
                android:textColor="@android:color/white"
                android:textSize="18sp" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>